--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,11 @@
-﻿altair
-asttokens
-attrs
-blinker
-bottleneck
-brotli
-cachetools
-certifi
-charset-normalizer
-click
-colorama
-comm
-contourpy
-cycler
-debugpy
-decorator
-exceptiongroup
-executing
-fonttools
-gitdb
-gitpython
-idna
-ipykernel
-ipython
-jedi
-jinja2
-joblib
-jsonschema
-jsonschema-specifications
-jupyter-client
-jupyter-core
-kiwisolver
-markupsafe
-matplotlib==3.10.0
-matplotlib-inline
-mkl-service==2.4.0
-mkl_fft
-mkl_random
-narwhals
-nest-asyncio
-numexpr
-numpy
-packaging
-pandas
-parso
-pillow
-platformdirs
-prompt-toolkit
-protobuf
-psutil
-pure-eval
-pyarrow
-pydeck
-pygments
-pyparsing
-pyqt6==6.7.1
-pyqt6-sip
-pysocks
-python-dateutil
-pytz
-pywin32==308
-pyyaml
-pyzmq
-referencing
-requests
-rpds-py
-scikit-learn
-scipy
-seaborn
-sip
-six
-smmap
-stack-data
 streamlit
 streamlit-lottie
-tenacity
-threadpoolctl
-toml
-tomli
-tornado
-traitlets
-typing-extensions
-tzdata
-unicodedata2
-urllib3
-watchdog
-wcwidth
-win-inet-pton
+numpy
+pandas
+scikit-learn
+xgboost
+matplotlib
+seaborn
 plotly
 joblib
-xgboost
+
